<resources>
    <string name="app_name">MyBestTaxi</string>
    <string name="action_naviguation">Naviguation</string>
    <string name="action_informations">Informations</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="phoneEditText">Phone:</string>
    <string name="NameTextView">Name:</string>
    <string name="EmailTextView">Email:</string>
    <string name="startTextView">START POINT:</string>
    <string name="destTextView">DESTINATION:</string>
    <string name="taxi">taxi</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="detailsNameTextView">NAME</string>
    <string name="detailsEmailTextView">EMAIL</string>
    <string name="detailsPhoneTextView">PHONE</string>
</resources>
